--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
@@ -75,103 +75,22 @@
         </div>
     </div>
     <div id="div_main_info" class="div_main_info">
-        <div class="div_main_info_body" id="div_main_info_body_wxfz">
-            <div class="div_main_info_zffs">
-                <img class="img_radio" id="img_radio_wxzf" />
-                <img class="img_zffs" id="img_zffs_wxzf" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wxzf.png")" />
-                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")" />
-            </div>
+        <div class="div_main_info_body" id="div_main_info_body_wxzf">
         </div>
         <div class="div_main_info_body" id="div_main_info_body_wyzf" style="display: block; height: 170px;">
-            <div class="div_main_info_tip">
-                请选择支付的银行卡<span class="span_main_info_tip">（请确保您的银行卡已开通网银） </span>
-            </div>
-            <div class="div_main_info_zffs_wyzf" id="div_main_info_zffs_wyzf_gsyh">
-                <img class="img_radio" id="img_radio_wyzf_gsyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_gsyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_gsyh.png")" />
-                <img class="img_select" id="img_select_wyzf_gsyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf" id="div_main_info_zffs_wyzf_zsyh">
-                <img class="img_radio" id="img_radio_wyzf_zsyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_zsyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_zsyh.png")" />
-                <img class="img_select" id="img_select_wyzf_zsyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf" id="div_main_info_zffs_wyzf_nyyh">
-                <img class="img_radio" id="img_radio_wyzf_nyyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_nyyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_nyyh.png")" />
-                <img class="img_select" id="img_select_wyzf_nyyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf" id="div_main_info_zffs_wyzf_zgyh">
-                <img class="img_radio" id="img_radio_wyzf_zgyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_zgyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_zgyh.png")" />
-                <img class="img_select" id="img_select_wyzf_zgyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf" id="div_main_info_zffs_wyzf_jsyh">
-                <img class="img_radio" id="img_radio_wyzf_jsyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_jsyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_jsyh.png")" />
-                <img class="img_select" id="img_select_wyzf_jsyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf right" id="div_main_info_zffs_wyzf_pfyh">
-                <img class="img_radio" id="img_radio_wyzf_pfyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_pfyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_pfyh.png")" />
-                <img class="img_select" id="img_select_wyzf_pfyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf" id="div_main_info_zffs_wyzf_jtyh">
-                <img class="img_radio" id="img_radio_wyzf_jtyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_jtyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_jtyh.png")" />
-                <img class="img_select" />
-            </div>
-            <div class="div_main_info_zffs_wyzf" id="div_main_info_zffs_wyzf_msyh">
-                <img class="img_radio" id="img_radio_wyzf_msyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_msyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_msyh.png")" />
-                <img class="img_select" id="img_select_wyzf_msyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf bottom" id="div_main_info_zffs_wyzf_payh">
-                <img class="img_radio" id="img_radio_wyzf_payh" />
-                <img class="img_zffs" id="img_zffs_wxzf_payh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_payh.png")" />
-                <img class="img_select" id="img_select_wyzf_payh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf bottom" id="div_main_info_zffs_wyzf_gfyh">
-                <img class="img_radio" id="img_radio_wyzf_gfyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_gfyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_gfyh.png")" />
-                <img class="img_select" />
-            </div>
-            <div class="div_main_info_zffs_wyzf bottom" id="div_main_info_zffs_wyzf_gdyh">
-                <img class="img_radio" id="img_radio_wyzf_gdyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_gdyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_gdyh.png")" />
-                <img class="img_select" id="img_select_wyzf_gdyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf bottom right" id="div_main_info_zffs_wyzf_bjyh">
-                <img class="img_radio" id="img_radio_wyzf_bjyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_bjyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_bjyh.png")" />
-                <img class="img_select" id="img_select_wyzf_bjyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf bottom" id="div_main_info_zffs_wyzf_zxyh">
-                <img class="img_radio" id="img_radio_wyzf_zxyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_zxyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_zxyh.png")" />
-                <img class="img_select" id="img_select_wyzf_zxyh" />
-            </div>
-            <div class="div_main_info_zffs_wyzf bottom right" id="div_main_info_zffs_wyzf_xyyh">
-                <img class="img_radio" id="img_radio_wyzf_xyyh" />
-                <img class="img_zffs" id="img_zffs_wxzf_xyyh" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_wyzf_xyyh.png")" />
-                <img class="img_select" id="img_select_wyzf_xyyh" />
-            </div>
         </div>
-        <div class="div_main_info_body" id="div_main_info_body_zfbfz">
-            <div class="div_main_info_zffs">
-                <img class="img_radio" id="img_radio_zfbzf" />
-                <img class="img_zffs" id="img_zffs_zfbzf" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zfbzf.png")" />
-                <img class="img_select" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png")" />
-            </div>
+        <div class="div_main_info_body" id="div_main_info_body_kjzf" style="display: block; height: 340px;">
         </div>
-        <div class="div_main_info_body">
+        <div class="div_main_info_body" id="div_main_info_body_zfbzf">
+        </div>
+        <div class="div_main_info_body" style="height: 50px;">
             <input class="input_main_info_ljzf" id="input_main_info_ljzf" value="立即支付" type="button" />
         </div>
         <div class="div_main_info_body">
             <table>
                 <tr>
                     <td>
-                        <input class="input_main_info_body_bottom" id="input_main_info_body_bottom" type="checkbox" />
+                        <input class="input_main_info_body_bottom" id="input_main_info_body_bottom" type="checkbox"/>
                     </td>
                     <td>
                         <span class="span_main_info_body_bottom">已阅读并同意</span>
@@ -181,6 +100,28 @@
                     </td>
                 </tr>
             </table>
+        </div>
+        <em class="em_main_info_body_split" id="em_main_info_body_split"></em>
+        <div class="div_main_info_body_wxts">
+            <span style="font-size: 12px; font-weight: 700;">温馨提示</span>
+        </div>
+        <div class="div_main_info_body_wxts">
+            <span class="span_main_info_body_wxlj">充值、支付帮助中心</span>
+        </div>
+        <div class="div_main_info_body_wxts">
+            <span class="span_main_info_body_wxlj">如何开通网银?</span>
+        </div>
+        <div class="div_main_info_body_wxts">
+            <span class="span_main_info_body_wxts" style="color:#333">网银使用须知</span>
+        </div>
+        <div class="div_main_info_body_wxts">
+            <span class="span_main_info_body_wxts">1.尽量使用ie浏览器&nbsp;&nbsp;&nbsp;&nbsp;2.过程中请勿按浏览器“后退”键&nbsp;&nbsp;&nbsp;&nbsp;3.提交支付后，将转入银行的网站，请根据页面提示操作 </span>
+        </div>
+        <div class="div_main_info_body_wxts">
+            <span class="span_main_info_body_wxts" style="color:#333">如果提交后页面打不开，可以尝试</span>
+        </div>
+        <div class="div_main_info_body_wxts">
+            <span class="span_main_info_body_wxts">1.过3分钟后再刷新页面&nbsp;&nbsp;&nbsp;&nbsp;2.清理IE缓存&nbsp;&nbsp;&nbsp;&nbsp;3.卸载3721或google工具条&nbsp;&nbsp;&nbsp;&nbsp;4.换个浏览器或换个上网环境 </span>
         </div>
     </div>
 </body>
