--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
@@ -57,10 +57,6 @@
             <span class="spanstep" id="spanZFBZF">支付宝支付</span>
             <em class="emstep" id="emZFBZF"></em>
         </div>
-        <div class="divstep" id="divYFTZF">
-            <span class="spanstep" id="spanYFTZF">易付通支付</span>
-            <em class="emstep" id="emYFTZF"></em>
-        </div>
         <div class="divstep" id="divSJKCZ">
             <span class="spanstep" id="spanSJKCZ">手机卡充值</span>
             <em class="emstep" id="emSJKCZ"></em>
@@ -71,7 +67,7 @@
         </div>
         <div class="divstep">
             <span class="spanstep" id="spanOther">&nbsp;</span>
-            <em class="emstep" id="emOther" style="width: 200px;"></em>
+            <em class="emstep" id="emOther" style="width: 300px;"></em>
         </div>
     </div>
     <div id="div_main_info" class="div_main_info">
@@ -83,45 +79,52 @@
         </div>
         <div class="div_main_info_body" id="div_main_info_body_zfbzf">
         </div>
-        <div class="div_main_info_body" style="height: 50px;">
-            <input class="input_main_info_ljzf" id="input_main_info_ljzf" value="立即支付" type="button" />
+        <div class="div_main_info_body" id="div_main_info_body_yhhk" style="display: block; height: 340px;">
+            <div style="height: 100%; width: 100%; display: block;">
+                <div style="width: 302px; height: 167px; border-radius: 8px; border: 1px solid #cccccc; display: block"></div>
+            </div>
         </div>
-        <div class="div_main_info_body">
-            <table>
-                <tr>
-                    <td>
-                        <input class="input_main_info_body_bottom" id="input_main_info_body_bottom" type="checkbox"/>
-                    </td>
-                    <td>
-                        <span class="span_main_info_body_bottom">已阅读并同意</span>
-                    </td>
-                    <td>
-                        <span class="span_main_info_body_bottom span_main_info_body_bottom_xy" id="span_main_info_body_bottom_xy">《信息小镇现金服务协议》</span>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <em class="em_main_info_body_split" id="em_main_info_body_split"></em>
-        <div class="div_main_info_body_wxts">
-            <span style="font-size: 12px; font-weight: 700;">温馨提示</span>
-        </div>
-        <div class="div_main_info_body_wxts">
-            <span class="span_main_info_body_wxlj">充值、支付帮助中心</span>
-        </div>
-        <div class="div_main_info_body_wxts">
-            <span class="span_main_info_body_wxlj">如何开通网银?</span>
-        </div>
-        <div class="div_main_info_body_wxts">
-            <span class="span_main_info_body_wxts" style="color:#333">网银使用须知</span>
-        </div>
-        <div class="div_main_info_body_wxts">
-            <span class="span_main_info_body_wxts">1.尽量使用ie浏览器&nbsp;&nbsp;&nbsp;&nbsp;2.过程中请勿按浏览器“后退”键&nbsp;&nbsp;&nbsp;&nbsp;3.提交支付后，将转入银行的网站，请根据页面提示操作 </span>
-        </div>
-        <div class="div_main_info_body_wxts">
-            <span class="span_main_info_body_wxts" style="color:#333">如果提交后页面打不开，可以尝试</span>
-        </div>
-        <div class="div_main_info_body_wxts">
-            <span class="span_main_info_body_wxts">1.过3分钟后再刷新页面&nbsp;&nbsp;&nbsp;&nbsp;2.清理IE缓存&nbsp;&nbsp;&nbsp;&nbsp;3.卸载3721或google工具条&nbsp;&nbsp;&nbsp;&nbsp;4.换个浏览器或换个上网环境 </span>
+        <div id="div_bottom">
+            <div class="div_main_info_body" style="height: 50px;">
+                <input class="input_main_info_ljzf" id="input_main_info_ljzf" value="立即支付" type="button" />
+            </div>
+            <div class="div_main_info_body">
+                <table>
+                    <tr>
+                        <td>
+                            <input class="input_main_info_body_bottom" id="input_main_info_body_bottom" type="checkbox" />
+                        </td>
+                        <td>
+                            <span class="span_main_info_body_bottom">已阅读并同意</span>
+                        </td>
+                        <td>
+                            <span class="span_main_info_body_bottom span_main_info_body_bottom_xy" id="span_main_info_body_bottom_xy">《信息小镇现金服务协议》</span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <em class="em_main_info_body_split" id="em_main_info_body_split"></em>
+            <div class="div_main_info_body_wxts">
+                <span style="font-size: 12px; font-weight: 700;">温馨提示</span>
+            </div>
+            <div class="div_main_info_body_wxts">
+                <span class="span_main_info_body_wxlj">充值、支付帮助中心</span>
+            </div>
+            <div class="div_main_info_body_wxts">
+                <span class="span_main_info_body_wxlj">如何开通网银?</span>
+            </div>
+            <div class="div_main_info_body_wxts">
+                <span class="span_main_info_body_wxts" style="color:#333">网银使用须知</span>
+            </div>
+            <div class="div_main_info_body_wxts">
+                <span class="span_main_info_body_wxts">1.尽量使用ie浏览器&nbsp;&nbsp;&nbsp;&nbsp;2.过程中请勿按浏览器“后退”键&nbsp;&nbsp;&nbsp;&nbsp;3.提交支付后，将转入银行的网站，请根据页面提示操作 </span>
+            </div>
+            <div class="div_main_info_body_wxts">
+                <span class="span_main_info_body_wxts" style="color:#333">如果提交后页面打不开，可以尝试</span>
+            </div>
+            <div class="div_main_info_body_wxts">
+                <span class="span_main_info_body_wxts">1.过3分钟后再刷新页面&nbsp;&nbsp;&nbsp;&nbsp;2.清理IE缓存&nbsp;&nbsp;&nbsp;&nbsp;3.卸载3721或google工具条&nbsp;&nbsp;&nbsp;&nbsp;4.换个浏览器或换个上网环境 </span>
+            </div>
         </div>
     </div>
 </body>
