--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
@@ -41,9 +41,9 @@
         </table>
     </div>
     <div class="div_content" style="margin-top: 0px;">
-        <div class="divstep" id="divWXZF">
-            <span class="spanstep" id="spanWXZF">微信支付</span>
-            <em class="emstep" id="emWXZF"></em>
+        <div class="divstep" id="divDSFPTZF">
+            <span class="spanstep" id="spanDSFPTZF">第三方平台支付</span>
+            <em class="emstep" id="emDSFPTZF"></em>
         </div>
         <div class="divstep" id="divWYZF">
             <span class="spanstep" id="spanWYZF">网银支付</span>
@@ -52,10 +52,6 @@
         <div class="divstep" id="divKJZF">
             <span class="spanstep" id="spanKJZF">快捷支付</span>
             <em class="emstep" id="emKJZF"></em>
-        </div>
-        <div class="divstep" id="divZFBZF">
-            <span class="spanstep" id="spanZFBZF">支付宝支付</span>
-            <em class="emstep" id="emZFBZF"></em>
         </div>
         <div class="divstep" id="divSJKCZ">
             <span class="spanstep" id="spanSJKCZ">手机卡充值</span>
@@ -71,13 +67,11 @@
         </div>
     </div>
     <div id="div_main_info" class="div_main_info">
-        <div class="div_main_info_body" id="div_main_info_body_wxzf">
+        <div class="div_main_info_body" id="div_main_info_body_dsfptzf">
         </div>
         <div class="div_main_info_body" id="div_main_info_body_wyzf" style="display: block; height: 170px;">
         </div>
         <div class="div_main_info_body" id="div_main_info_body_kjzf" style="display: block; height: 340px;">
-        </div>
-        <div class="div_main_info_body" id="div_main_info_body_zfbzf">
         </div>
         <div class="div_main_info_body" id="div_main_info_body_yhhk" style="display: block; height: 340px;">
             <div style="height: 100%; width: 100%; display: block;">
