--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
@@ -41,9 +41,9 @@
         </table>
     </div>
     <div class="div_content" style="margin-top: 0px;">
-        <div class="divstep" id="divDSFPTZF">
+        <div class="divstep" id="divDSFPTZF" style="width: 140px;">
             <span class="spanstep" id="spanDSFPTZF">第三方平台支付</span>
-            <em class="emstep" id="emDSFPTZF"></em>
+            <em class="emstep" id="emDSFPTZF" style="width: 140px;"></em>
         </div>
         <div class="divstep" id="divWYZF">
             <span class="spanstep" id="spanWYZF">网银支付</span>
@@ -74,9 +74,22 @@
         <div class="div_main_info_body" id="div_main_info_body_kjzf" style="display: block; height: 340px;">
         </div>
         <div class="div_main_info_body" id="div_main_info_body_yhhk" style="display: block; height: 340px;">
-            <div style="height: 100%; width: 100%; display: block;">
-                <div style="width: 302px; height: 167px; border-radius: 8px; border: 1px solid #cccccc; display: block"></div>
+            <div class="div_main_info_body_yhhk_yhk">
+                <div class="div_main_info_body_yhhk_yhk_inner">
+                    <img class="img_main_info_body_yhhk_yhk" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_yhhk_jsyh.png")"/>
+                    <em class="em_main_info_body_yhhk_yhk"></em>
+                    <span class="span_main_info_body_yhhk_yhk_hh">6217&nbsp;&nbsp;0018&nbsp;&nbsp;2001&nbsp;&nbsp;1722&nbsp;&nbsp;869</span>
+                    <span class="span_main_info_body_yhhk_yhk_gs">户&nbsp;&nbsp;头：福建天问信息技术有限公司</span>
+                    <span class="span_main_info_body_yhhk_yhk_gs">开户行：建设银行古田路支行</span>
+                </div>
             </div>
+            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_title">第一步</div>
+            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text">银行汇款，为了方便查账，请尽量在汇款后多加几元或几角。</div>
+            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_title">第二步</div>
+            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text div_main_info_body_yhhk_text_lxkf">请您在汇款成功后与客服联系：<span class="span_main_info_body_yhhk_text_lxkf">about.infotownlet.com</span></div>
+            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text">告知 需要充值的账户类型、汇款的金额、汇款人姓名、汇出银行（需精确到支行）、汇入银行、58用户名等信息。</div>
+            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_title">第三步</div>
+            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text">58客服人员确认汇款到账，并为您指定的58用户名进行充值。</div>
         </div>
         <div id="div_bottom">
             <div class="div_main_info_body" style="height: 50px;">
