--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -19,7 +19,7 @@
             </a>
             <img class="img_top_right_split" />
             <a class="a_top_right_sjdl no_line">
-                <img class="img_top_right_sjdl" />
+                <span class="img_top_right_sjdl"></span>
                 手机登录
             </a>
             <img class="img_top_right_split" />
