后台首页顶部调整

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -14,19 +14,17 @@
 <body style="width: 100%; height: 100%;">
     <div id="divTop" class="div_top">
         <div class="div_top_right">
-            <a class="a_top_right_sy no_line">
+            <span class="span_top_right">
                 信息小镇首页
-            </a>
-            <img class="img_top_right_split" />
-            <a class="a_top_right_sjdl no_line">
-                <span class="img_top_right_sjdl"></span>
+            </span>
+            <span class="span_top_right_split"></span>
+            <span class="span_top_right_sjdl"></span>
+            <span class="span_top_right">
                 手机登录
-            </a>
-            <img class="img_top_right_split" />
-            <a class="a_top_right_yhm no_line">
-                rebirth033
-                <img class="img_top_right_yhm" />
-            </a>
+            </span>
+            <span class="span_top_right_split"></span>
+            <span class="span_top_right" id="span_top_right_yhm"></span>
+            <span class="span_top_right_yhm"></span>
         </div>
     </div>
     <div id="divHead" class="div_head">
