--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
@@ -13,53 +13,46 @@
     padding-top: 5px;
 }
 
-.a_top_right_sy {
+.span_top_right {
     text-decoration: none;
     color: #666;
     font-size: 12px;
     cursor: pointer;
+    float: left;
 }
 
-.img_top_right_split {
+    .span_top_right:hover {
+        text-decoration: none;
+        color: #5bc0de;
+    }
+
+.span_top_right_split {
     width: 1px;
     height: 12px;
     background: #cccccc;
-    margin: -3px 5px 0 5px;
+    margin: 2px 10px 0 10px;
+    display: inline-block;
+    float: left;
 }
 
-.a_top_right_sjdl {
-    text-decoration: none;
-    color: #666;
-    font-size: 12px;
-    cursor: pointer;
-}
-
-.no_line:hover {
-    text-decoration: none;
-    color: #5bc0de;
-}
-
-.img_top_right_sjdl {
+.span_top_right_sjdl {
     background-image: url(images/cellphone.png);
     background-size: 100%;
     width: 12px;
     height: 21px;
     margin: -3px 5px 0 5px;
     display: inline-block;
-}
-
-.a_top_right_yhm {
-    text-decoration: none;
-    color: #666;
-    font-size: 12px;
+    float: left;
     cursor: pointer;
 }
 
-.img_top_right_yhm {
+.span_top_right_yhm {
     background-image: url(images/arrow_down.png);
     width: 12px;
     height: 18px;
     margin: 0px 5px 0 5px;
+    float: left;
+    cursor: pointer;
 }
 
 .div_head {
@@ -417,10 +410,10 @@
     font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", tahoma, arial, simhei;
 }
 
-.span_div_bottom_inner:hover {
-    cursor: pointer;
-    text-decoration: underline;
-}
+    .span_div_bottom_inner:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
 
 .em_div_bottom_inner {
     width: 1px;
