--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -18,13 +18,26 @@
                 信息小镇首页
             </span>
             <span class="span_top_right_split"></span>
-            <span class="span_top_right_sjdl"></span>
-            <span class="span_top_right">
-                手机登录
-            </span>
+            <div class="div_top_right_inner">
+                <span class="span_top_right_sjdl"></span>
+                <span class="span_top_right">
+                    手机登录
+                </span>
+            </div>
             <span class="span_top_right_split"></span>
-            <span class="span_top_right" id="span_top_right_yhm"></span>
-            <span class="span_top_right_yhm"></span>
+            <div class="div_top_right_inner" id="div_top_right_inner_yhm">
+                <span class="span_top_right span_top_right_yhm_text" id="span_top_right_yhm_text"></span>
+                <span class="span_top_right_yhm" id="span_top_right_yhm_img"></span>
+                <div class="div_top_right_dropdown_yhm" id="div_top_right_dropdown_yhm">
+                    <ul class="ul_top_right_yhm">
+                        <li class="li_top_right_yhm" onclick="ShowWDXX()">我的信息</li>
+                        <li class="li_top_right_yhm" onclick="ShowWDZH()">我的账户</li>
+                        <li class="li_top_right_yhm" onclick="ShowWDZJ()">我的资金</li>
+                        <li class="li_top_right_yhm" onclick="ShowSHGJ()">生活工具</li>
+                        <li class="li_top_right_yhm" onclick="Exit()">退出</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
     <div id="divHead" class="div_head">
