--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHDLXX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHDLXX.css
@@ -9,6 +9,25 @@
     padding-left: 80px;
 }
 
+.div_body {
+    width: 100%;
+    height: 578px;
+    display: block;
+    text-align: center;
+    background-image: url(images/yhdlxx_background.jpg);
+    padding-top: 20px;
+}
+
+.div_body_yhdl {
+    width: 460px;
+    height: 420px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 4px;
+    padding: 0 25px;
+    box-shadow: 0px 0px 8px #888;
+}
+
 .span_head_main_logo {
     background-image: url(images/logo_blue.png);
     background-repeat: no-repeat;
@@ -25,4 +44,43 @@
     display: block;
     margin-top: 10px;
     background-color: #31b0d5;
+}
+
+.Info {
+    font-size: 12px;
+    width: 100%;
+    height:20px;
+    padding:0 10px !important;
+}
+
+.div_bottom {
+    border-top: 1px solid #cccccc;
+    display: block;
+    text-align: center;
+    height: 100px;
+    color: #333;
+    padding-top: 15px;
+    font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;
+    background-color: #000;
+    opacity: 0.5;
+    color: #fff;
+    line-height: 34px;
+}
+
+.span_div_bottom_inner {
+    font-size: 14px;
+    font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", tahoma, arial, simhei;
+}
+
+    .span_div_bottom_inner:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
+.em_div_bottom_inner {
+    width: 1px;
+    background-color: #fff;
+    height: 9px;
+    margin: 2px 5px 0px 5px;
+    display: inline-block;
 }
