--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDLXX/YHDLXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDLXX/YHDLXX.cshtml
@@ -18,7 +18,7 @@
     </div>
     <em class="em_head_split"></em>
     <div class="div_body">
-        <div>
+        <div class="div_body_yhdl">
             <table class="table" style="width: 300px;">
                 <tr>
                     <td class="headtd"><span class="title">欢迎来到信息小镇</span></td>
@@ -32,56 +32,83 @@
                     </td>
                 </tr>
             </table>
+            <div id="myTabContent" class="tab-content">
+                <div id="username" style="display: block">
+                    <table class="table" style="width: 600px;">
+                        <tr>
+                            <td>
+                                <input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入用户名">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="Info" id="YHMInfo"></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="password" class="form-control input_text" id="MM" column="MM" placeholder="请输入登录密码">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="Info" id="MMInfo"></td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: left">
+                                <input id="checkMMSFZDDL" type="checkbox" />
+                                <span class="spanZDDD">下次自动登录</span>
+                                <a id="aWJMM">忘记密码</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><input type="button" class="btn btn-info input_text" id="MMDL" value="登录" /></td>
+                        </tr>
+                    </table>
+                </div>
+                <div id="cellphone" style="display: none">
+                    <table class="table" style="width: 600px;">
+                        <tr>
+                            <td id="tdSJ">
+                                <input class="form-control input_text" id="SJ" maxlength="11" type="text" style="width: 266px;" column="SJ" placeholder="请输入手机号">
+                                <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="Info" id="SJInfo"></td>
+                        </tr>
+                        <tr>
+                            <td><input type="text" class="form-control input_text" id="YZM" column="YZM" placeholder="请输入验证码"></td>
+                        </tr>
+                        <tr>
+                            <td class="Info" id="YZMInfo"></td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: left">
+                                <input id="checkSJSFZDDL" type="checkbox" />
+                                <span class="spanZDDD">下次自动登录</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><input type="button" class="btn btn-info input_text" id="SJDL" value="登录" /></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
-        <div id="myTabContent" class="tab-content">
-            <div id="username" style="display: block">
-                <table class="table" style="width: 600px;">
-                    <tr>
-                        <td style="width: 50%"><input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入用户名"></td>
-                        <td class="Info" id="YHMInfo" style="width: 50%"></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="password" class="form-control input_text" id="MM" column="MM" placeholder="请输入登录密码">
-                        </td>
-                        <td class="Info" id="MMInfo" style="width: 50%"></td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left">
-                            <input id="checkMMSFZDDL" type="checkbox" />
-                            <span class="spanZDDD">下次自动登录</span>
-                            <a id="aWJMM">忘记密码</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><input type="button" class="btn btn-info input_text" id="MMDL" value="登录" /></td>
-                    </tr>
-                </table>
-            </div>
-            <div id="cellphone" style="display: none">
-                <table class="table" style="width: 600px;">
-                    <tr>
-                        <td id="tdSJ">
-                            <input type="text" style="width: 266px;" class="form-control input_text" id="SJ" column="SJ" placeholder="请输入手机号">
-                            <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码" />
-                        </td>
-                        <td class="Info" id="SJInfo" style="width: 50%"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="text" class="form-control input_text" id="YZM" column="YZM" placeholder="请输入验证码"></td>
-                        <td class="Info" id="YZMInfo" style="width: 50%"></td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left">
-                            <input id="checkSJSFZDDL" type="checkbox" />
-                            <span class="spanZDDD">下次自动登录</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><input type="button" class="btn btn-info input_text" id="SJDL" value="登录" /></td>
-                    </tr>
-                </table>
-            </div>
+
+    </div>
+    <div class="div_bottom">
+        <div class="div_bottom_inner">
+            <span class="span_div_bottom_inner">关于信息小镇</span>
+            <em class="em_div_bottom_inner"></em>
+            <span class="span_div_bottom_inner">联系我们</span>
+            <em class="em_div_bottom_inner"></em>
+            <span class="span_div_bottom_inner">友情链接</span>
+        </div>
+        <div class="div_bottom_inner">
+            <span class="span_div_bottom_inner">推广服务</span>
+            <em class="em_div_bottom_inner"></em>
+            <span class="span_div_bottom_inner">客户服务中心</span>
+            <em class="em_div_bottom_inner"></em>
+            <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
         </div>
     </div>
 </body>
