--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDXJ/WDXJ_MXCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDXJ/WDXJ_MXCX.css
@@ -221,3 +221,14 @@
 .a_main_info_cz {
     cursor: pointer;
 }
+
+.div_no_info {
+    width: 900px;
+    height: 44px;
+    padding: 10px 0 7px 10px;
+    border-bottom: 1px solid #f1f1f1;
+    border-top: 1px solid #f1f1f1;
+    font-size: 12px;
+    color: #000;
+    text-align: center;
+}
