--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -16,7 +16,7 @@
 <body>
     <div>
         <div class="div_left_box">
-            <div class="div_left_box_info">
+            <div class="div_left_box_info" id="div_left_box_info_zhyecz">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_zhyecz.png")" />
                 <span class="span_left_box_info_text">账户余额充值</span>
                 <span class="span_left_box_info_remark">进入我的账户充值</span>
