--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -27,12 +27,12 @@
                 <span class="span_left_box_info_text">找回密码</span>
                 <span class="span_left_box_info_remark">自助快速找回账户密码</span>
             </div>
-            <div class="div_left_box_info">
+            <div class="div_left_box_info" id="div_left_box_info_dhbmycx">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_dhbmycx.png")" />
                 <span class="span_left_box_info_text">电话被冒用查询</span>
                 <span class="span_left_box_info_remark">输入电话号码自助查询</span>
             </div>
-            <div class="div_left_box_info">
+            <div class="div_left_box_info" id="div_left_box_info_dbddxyzm">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_sbddxyzm.png")" style="width: 36px;" />
                 <span class="span_left_box_info_text">收不到短信验证码</span>
                 <span class="span_left_box_info_remark">自助电话获取语音验证码</span>
