--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_DHMYCX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_DHMYCX.cshtml
@@ -21,7 +21,7 @@
     </div>
     <em class="em_split"></em>
     <div class="div_body">
-        <div id="div_sjhsr" style="display:block;">
+        <div id="div_sjhsr" style="display:none;">
             <div class="div_content_info">
                 <span class="span_content_info">第一步：输入您的手机号码，点击查询按钮查找信息</span>
                 <div class="div_content_info_inner">
@@ -57,6 +57,26 @@
             <div class="div_content_info">
                 <span class="span_content_info_sjyzm_bottom_tip">提示：受网络影响，短信发送可能有延迟；信息删除需要几分钟，请耐心等待（<span class="span_content_info_sjyzm_bottom_tip_red">不收取任何通讯费</span>）</span>
             </div>
+        </div>
+        <div id="div_sdzh" style="display:block;">
+            <div class="div_content_info">
+                <span class="span_content_info">第三步：选择您要删除的信息和锁定的账户</span>
+                <span class="span_content_info_sdzh">以下是<span class="span_content_info_sdzh_sjhm" id="span_content_info_sdzh_sjhm">13675017762</span>查询结果 </span>
+            </div>
+            <div class="div_content_info">
+                <table class="table_main_info">
+                    <tbody id="tbody_main_info_xttz"></tbody>
+                </table>
+                <div class="div_main_info_bottom">
+                    <input class="checkbox_main_info_bottom" id="checkbox_main_info_bottom" type="checkbox" />
+                    <span class="span_main_info_bottom">全选</span>
+                    <input class="input_main_info_bottom" id="input_main_info_bottom_scxzx" type="button" value="删除" />
+                    <input class="input_main_info_bottom" id="input_main_info_bottom_sdzh" style="width:170px;" type="button" value="锁定电话号码并删除信息" />
+                    <div class="div_main_info_bottom_fy" id="div_main_info_bottom_fy">
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
