--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_DHMYCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_DHMYCX.css
@@ -141,11 +141,31 @@
     padding-top: 5px;
 }
 
+.span_content_info {
+    display: block;
+}
+
 .span_content_info_sjyzm_tip {
     font-size: 14px;
     display: block;
     height: 30px;
     width: 100%;
+}
+
+.span_content_info_sdzh {
+    background-color: #fafafa;
+    height: 30px;
+    width: 100%;
+    font-size: 12px;
+    display: block;
+    padding: 8px 10px;
+    margin-top: 10px;
+}
+
+.span_content_info_sdzh_sjhm {
+    color: #ff0000;
+    font-weight: bold;
+    font-size: 12px;
 }
 
 .span_content_info_sjyzm_tip_inner {
@@ -164,4 +184,102 @@
 
 .span_content_info_sjyzm_bottom_tip_red {
     color: #ff0000;
+}
+
+
+.table_main_info {
+    width: 900px;
+}
+
+.div_main_info_bottom {
+    background-color: #fff;
+    height: 38px;
+    color: #333;
+    font-size: 14px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    padding-left: 10px;
+    padding-top: 8px;
+}
+
+.tr_main_info {
+    color: #666;
+    font-size: 12px;
+    border-bottom: 1px solid #f1f1f1;
+    height: 38px;
+}
+
+    .tr_main_info th {
+        text-align: left;
+        padding-left: 10px;
+    }
+
+    .tr_main_info td {
+        text-align: left;
+        padding-left: 10px;
+    }
+    
+.checkbox_main_info_bottom {
+    float: left;
+}
+
+.span_main_info_bottom {
+    font-size: 12px;
+    margin-left: 8px;
+    margin-top: 2px;
+    float: left;
+}
+
+.input_main_info_bottom {
+    width: 50px;
+    height: 23px;
+    font-size: 12px;
+    margin-left: 10px;
+    float: left;
+    background-color: rgba(241,241,241,1);
+    color: #333;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+    .input_main_info_bottom:hover {
+        background-color: #e2e2e2;
+    }
+
+.div_main_info_bottom_fy {
+    float: right;
+}
+
+.a_main_info_bottom_fy {
+    line-height: 18px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 12px;
+    background-color: #ffffff;
+    border: 1px solid #dee3e7;
+    padding: 2px 6px;
+    display: inline-block;
+    margin: 0 6px;
+    color: #333;
+}
+
+.a_main_info_bottom_fy_current {
+    background-color: #5bc0de;
+    color: #ffffff;
+}
+
+.a_main_info_bottom_fy:hover {
+    background-color: #5bc0de;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.div_no_info {
+    width: 900px;
+    height: 44px;
+    padding: 10px 0 7px 10px;
+    border-bottom: 1px solid #f1f1f1;
+    border-top: 1px solid #f1f1f1;
+    font-size: 12px;
+    color: #000;
+    text-align: center;
 }
