--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_DHMYCX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_DHMYCX.cshtml
@@ -65,6 +65,14 @@
             </div>
             <div class="div_content_info">
                 <table class="table_main_info">
+                    <thead>
+                        <tr class="tr_main_info">
+                            <th style="width: 40px;"></th>
+                            <th style="width: 360px;">标题</th>
+                            <th style="width: 250px;">流水号</th>
+                            <th style="width: 250px;">创建时间</th>
+                        </tr>
+                    </thead>
                     <tbody id="tbody_main_info_xttz"></tbody>
                 </table>
                 <div class="div_main_info_bottom">
