--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -11,7 +11,7 @@
     <link href="@Url.Content("~/Areas/Business/Css/YHGL.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/YHGL.js")"></script>
 </head>
-<body style="width: 100%; height: 100%;">
+<body style="width: 100%; height: 100%; overflow-x:hidden;">
     <div id="divTop" class="div_top">
         <div class="div_top_right">
             <span class="span_top_right">
@@ -98,9 +98,9 @@
                     <span class="span_left_menu_first">我的资金</span>
                     <em class="em_left_menu"></em>
                 </li>
-                <li id="li_left_menu_XJ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanXJ">我的现金</span><img id="imgXJ" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>
-                <li id="li_left_menu_XJMXCX" class="li_left_menu"><span class="span_left_menu_third XJ_child" id="spanXJMXCX">明细查询</span></li>
-                <li id="li_left_menu_XJCZ" class="li_left_menu"><span class="span_left_menu_third XJ_child" id="spanXJCZ">充值</span></li>
+                @*<li id="li_left_menu_XJ" class="li_left_menu li_left_menu_expand"><span class="span_left_menu_second" id="spanXJ">我的现金</span><img id="imgXJ" class="img_left_menu_second" src="@Url.Content("~/Areas/Business/Css/images/down.png")" /></li>*@
+                <li id="li_left_menu_XJMXCX" class="li_left_menu"><span class="span_left_menu_second" id="spanXJMXCX">明细查询</span></li>
+                <li id="li_left_menu_XJCZ" class="li_left_menu"><span class="span_left_menu_second" id="spanXJCZ">充值</span></li>
             </ul>
             <ul id="ulSHGJ" class="ul_left_menu">
                 <li class="li_left_menu">
