--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -37,7 +37,7 @@
                 <span class="span_left_box_info_text">收不到短信验证码</span>
                 <span class="span_left_box_info_remark">自助电话获取语音验证码</span>
             </div>
-            <div class="div_left_box_info">
+            <div class="div_left_box_info" id="div_left_box_info_rzsm">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_rzsm.png")" />
                 <span class="span_left_box_info_text">认证说明</span>
                 <span class="span_left_box_info_remark">介绍认证及认证中的问题</span>
